use maven central java7 filewatchers (#1465)
* use maven central java7 filewatchers

and upgrade low-risk middleware

* CI logs append

* bump test memory requirements

* no need to manually clean snapshot caches

* gc logging

* better gc logging

* actually log out gc

* more GC, for lions-share

* appveyor upload all logs